Implement communication with OpenAI and Gemini APIs

--- a/docs/openapi/spec.yaml
+++ b/docs/openapi/spec.yaml
@@ -164,7 +164,7 @@ paths:
                 $ref: "#/components/schemas/Error"
   /models/check:
     get:
-      summary: Check if the executor component API is working properly
+      summary: Check if GENIE is working properly
       tags:
         - Models
       responses:
@@ -269,7 +269,7 @@ components:
         message:
           type: string
       example:
-        message: Executor component generator is working properly!
+        message: GENIE is working properly!
     Error:
       type: object
       required:
