--- a/src/package.json
+++ b/src/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/Trust4AI/GENIE#readme",
   "dependencies": {
+    "@google/generative-ai": "0.19.0",
     "awilix": "10.0.1",
     "cors": "2.8.5",
     "dotenv": "16.4.4",
     "express": "4.19.2",
     "express-validator": "7.0.1",
+    "openai": "4.63.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.0"
   },
