Fix model CRUD operations

--- a/docs/openapi/spec.yaml
+++ b/docs/openapi/spec.yaml
@@ -27,7 +27,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/GENIEModel"
+                  $ref: "#/components/schemas/GENIEModels"
         "500":
           description: Server Error
           content:
@@ -43,14 +43,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AddOrUpdateModelInput"
+              $ref: "#/components/schemas/AddModelInput"
       responses:
         "200":
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/GENIEModel"
+                $ref: "#/components/schemas/ModelDetails"
         "422":
           description: Validation Error
           content:
@@ -83,14 +83,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AddOrUpdateModelInput"
+              $ref: "#/components/schemas/UpdateModelInput"
       responses:
         "200":
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/GENIEModel"
+                $ref: "#/components/schemas/ModelDetails"
         "404":
           description: Model not found
           content:
@@ -214,13 +214,36 @@ paths:
                 $ref: "#/components/schemas/Error"
 components:
   schemas:
-    GENIEModel:
+    GENIEModels:
+      type: object
+      properties:
+        openai:
+          type: array
+          items:
+            type: string
+        gemini:
+          type: array
+          items:
+            type: string
+        ollama:
+          type: object
+          additionalProperties:
+            type: object
+            properties:
+              name:
+                type: string
+              url:
+                type: string
+    ModelDetails:
       type: object
       required:
+        - category
         - id
-        - name
-        - url
       properties:
+        category:
+          type: string
+          description: The category of the model
+          example: ollama
         id:
           type: string
           description: The unique identifier of the model
@@ -234,6 +257,7 @@ components:
           description: The url to use the model
           example: http://127.0.0.1:11434
       example:
+        category: ollama
         id: mistral-7b
         name: mistral:7b
         url: http://127.0.0.1:11434
@@ -314,7 +338,43 @@ components:
         msg: user_prompt must be a string with length greater than 1
         path: prompt
         location: body
-    AddOrUpdateModelInput:
+    AddModelInput:
+      type: object
+      required:
+        - category
+        - id
+      properties:
+        category:
+          description: The category of the model
+          type: string
+          enum:
+            - ollama
+            - openai
+            - gemini
+          example: ollama
+        id:
+          description: The unique identifier of the model
+          type: string
+          example: mistral-7b
+        name:
+          description: The base name of the model in Ollama
+          type: string
+          example: mistral:7b
+        base_url:
+          description: The base url to use the model
+          type: string
+          example: http://127.0.0.1
+        port:
+          description: The port to use the model
+          type: integer
+          example: 11434
+      example:
+        category: ollama
+        id: mistral-7b
+        name: mistral:7b
+        base_url: http://127.0.0.1
+        port: 11434
+    UpdateModelInput:
       type: object
       required:
         - id
