Fix Mistral configuration

--- a/.env.docker
+++ b/.env.docker
@@ -1,6 +1,6 @@
 PORT=8081
 OLLAMA_BASE_URL=http://127.0.0.1:11434
-NUM_CONTEXT_WINDOW=16384
+NUM_CONTEXT_WINDOW=8000
 NODE_ENV=docker
 OPENAI_API_KEY=
 GEMINI_API_KEY=
