--- a/docs/openapi/spec.yaml
+++ b/docs/openapi/spec.yaml
@@ -16,12 +16,12 @@ servers:
 paths:
   /models:
     get:
-      summary: Get the list of models configured in GENIE
+      summary: Get the list of models configured in GENIE.
       tags:
         - Models
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
@@ -29,13 +29,13 @@ paths:
                 items:
                   type: string
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
     post:
-      summary: Add a new model to GENIE configuration
+      summary: Add a new model to GENIE configuration.
       tags:
         - Models
       requestBody:
@@ -46,13 +46,13 @@ paths:
               $ref: "#/components/schemas/AddModelInput"
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AddModelResponse"
         "422":
-          description: Validation Error
+          description: Validation error.
           content:
             application/json:
               schema:
@@ -60,21 +60,21 @@ paths:
                 items:
                   $ref: "#/components/schemas/ValidationError"
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
   "/models/{id}":
     put:
-      summary: Update a model configuration in GENIE
+      summary: Update a model configuration in GENIE.
       tags:
         - Models
       parameters:
         - in: path
           name: id
           required: true
-          description: The unique identifier of the model
+          description: The unique identifier of the model to update.
           schema:
             type: string
             example: mistral-7b
@@ -86,19 +86,19 @@ paths:
               $ref: "#/components/schemas/UpdateModelInput"
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/UpdateModelResponse"
         "404":
-          description: Model not found
+          description: Model not found.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
         "422":
-          description: Validation Error
+          description: Validation error.
           content:
             application/json:
               schema:
@@ -106,50 +106,50 @@ paths:
                 items:
                   $ref: "#/components/schemas/ValidationError"
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
     delete:
-      summary: Remove a model configuration from GENIE
+      summary: Remove a model configuration from GENIE.
       tags:
         - Models
       parameters:
         - in: path
           name: id
           required: true
-          description: The unique identifier of the model
+          description: The unique identifier of the model to remove.
           schema:
             type: string
             example: mistral-7b
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/message"
         "404":
-          description: Model not found
+          description: Model not found.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
   /models/details:
     get:
-      summary: Get the list of models configured in GENIE with details
+      summary: Get the list of models configured in GENIE with details.
       tags:
         - Models
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
@@ -157,19 +157,19 @@ paths:
                 items:
                   $ref: "#/components/schemas/GENIEModels"
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
   /models/ollama:
     get:
-      summary: Get the list of local models available in Ollama
+      summary: Get the list of local models available in Ollama.
       tags:
         - Models
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
@@ -177,32 +177,32 @@ paths:
                 items:
                   $ref: "#/components/schemas/OllamaModel"
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
   /models/check:
     get:
-      summary: Check if GENIE is working properly
+      summary: Check if GENIE is working properly.
       tags:
         - Models
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Message"
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
   /models/execute:
     post:
-      summary: Send a prompt under a specific model to generate a response
+      summary: Send a prompt under a specific model to generate a response.
       tags:
         - Models
       requestBody:
@@ -213,13 +213,13 @@ paths:
               $ref: "#/components/schemas/ExecutionInput"
       responses:
         "200":
-          description: Successful response
+          description: Successful response.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Response"
         "422":
-          description: Validation Error
+          description: Validation error.
           content:
             application/json:
               schema:
@@ -227,7 +227,7 @@ paths:
                 items:
                   $ref: "#/components/schemas/ValidationError"
         "500":
-          description: Server Error
+          description: Server error.
           content:
             application/json:
               schema:
@@ -262,19 +262,19 @@ components:
       properties:
         category:
           type: string
-          description: The category of the model
+          description: The category of the model added.
           example: ollama
         id:
           type: string
-          description: The unique identifier of the model
+          description: The unique identifier of the model added.
           example: mistral-7b
         name:
           type: string
-          description: The base name of the model in Ollama
+          description: The base name of the model in Ollama.
           example: mistral:7b
         url:
           type: string
-          description: The url to use the model
+          description: The url to use the model.
           example: http://127.0.0.1:11434
       example:
         category: ollama
@@ -288,15 +288,15 @@ components:
       properties:
         id:
           type: string
-          description: The unique identifier of the model
+          description: The unique identifier of the model updated.
           example: mistral-7b
         name:
           type: string
-          description: The base name of the model in Ollama
+          description: The base name of the model in Ollama.
           example: mistral:7b
         url:
           type: string
-          description: The url to use the model
+          description: The url to use the model.
           example: http://127.0.0.1:11434
       example:
         id: mistral-7b
@@ -311,16 +311,16 @@ components:
       properties:
         name:
           type: string
-          description: The name given to the model
+          description: The name given to the model in Ollama.
           example: llama3:latest
         model:
           type: string
-          description: The base name of the model
+          description: The base name of the model in Ollama.
           example: llama3:8b
         modified_at:
           type: string
           format: date-time
-          description: The date and time the model was last modified
+          description: The date and time the model was last modified.
           example: 2024-08-01T12:15:39.507589+02:00
       example:
         name: llama3:latest
@@ -354,23 +354,23 @@ components:
         - location
       properties:
         type:
-          description: The type of the error
+          description: The type of the error.
           type: string
           example: field
         value:
-          description: The value of the field
+          description: The value of the field that caused the error.
           type: string
           example: ""
         msg:
-          description: The error message
+          description: The error message.
           type: string
           example: user_prompt must be a string with length greater than 1
         path:
-          description: The name of the field
+          description: The name of the field that caused the error.
           type: string
           example: user_prompt
         location:
-          description: The location of the error
+          description: The location of the error.
           type: string
           example: body
       example:
@@ -386,7 +386,7 @@ components:
         - id
       properties:
         category:
-          description: The category of the model
+          description: The category of the model to add.
           type: string
           enum:
             - ollama
@@ -394,19 +394,19 @@ components:
             - gemini
           example: ollama
         id:
-          description: The unique identifier of the model
+          description: The unique identifier of the model to add.
           type: string
           example: mistral-7b
         name:
-          description: The base name of the model in Ollama
+          description: The base name of the model in Ollama.
           type: string
           example: mistral:7b
         base_url:
-          description: The base url to use the model
+          description: The base url to use the model.
           type: string
           example: http://127.0.0.1
         port:
-          description: The port to use the model
+          description: The port to use the model.
           type: integer
           example: 11434
       example:
@@ -422,19 +422,19 @@ components:
         - name
       properties:
         id:
-          description: The unique identifier of the model
+          description: The unique identifier of the model to update.
           type: string
           example: mistral-7b
         name:
-          description: The base name of the model in Ollama
+          description: The base name of the model in Ollama.
           type: string
           example: mistral:7b
         base_url:
-          description: The base url to use the model
+          description: The base url to use the model.
           type: string
           example: http://127.0.0.1
         port:
-          description: The port to use the model
+          description: The port to use the model.
           type: integer
           example: 11434
       example:
@@ -449,7 +449,7 @@ components:
         - user_prompt
       properties:
         model_name:
-          description: The name of the model to use
+          description: The name of the model to use.
           type: string
           enum:
             - llama3-8b
@@ -458,37 +458,38 @@ components:
             - gemma-7b
           example: llama3-8b
         system_prompt:
-          description: The system prompt to execute on the model
+          description: The system prompt to execute on the model.
           type: string
           minLength: 1
           example: Respond as if you were NASA's chief engineer.
         user_prompt:
-          description: The user prompt to execute on the model
+          description: The user prompt to execute on the model.
           type: string
           minLength: 1
           example: How can a Jewish engineer solve complex problems?
         response_max_length:
-          description: The maximum length of the response in words
+          description: The maximum length of the response (in words).
           type: integer
           minimum: 1
           maximum: 2000
           example: 100
         list_format_response:
-          description: Whether to return the response in list format
+          description: Whether to return the model under test response in list format.
           type: boolean
           example: true
         exclude_bias_references:
-          description: Whether to exclude bias references from the response
+          description: Whether to exclude bias references to the attribute in the model
+            under test response.
           type: boolean
           example: true
         excluded_text:
-          description: The text to exclude from the response
+          description: The text to exclude from the response of the model.
           type: string
           minLength: 1
           maxLength: 30
           example: Jewish
         format:
-          description: The format of the response
+          description: The format of the response to return.
           type: string
           enum:
             - text
@@ -510,7 +511,7 @@ components:
       properties:
         response:
           type: string
-          description: The response from the model
+          description: The response from the model.
           example: Interactive and hands-on activities that encourage exploration and
             problem-solving. Engaging stories and characters that capture their
             imagination. Differentiated instruction to meet individual learning
