--- a/src/package.json
+++ b/src/package.json
@@ -20,15 +20,16 @@
   },
   "homepage": "https://github.com/Trust4AI/GENIE#readme",
   "dependencies": {
-    "@google/generative-ai": "0.19.0",
     "awilix": "10.0.1",
     "cors": "2.8.5",
     "dotenv": "16.4.4",
     "express": "4.21.2",
     "express-validator": "7.0.1",
+    "https-proxy-agent": "7.0.6",
     "openai": "4.63.0",
     "swagger-jsdoc": "6.2.8",
-    "swagger-ui-express": "5.0.0"
+    "swagger-ui-express": "5.0.0",
+    "undici": "6.21.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
